--- a/Jan02/jsconfig.json
+++ b/Jan02/jsconfig.json
@@ -1,10 +1,6 @@
 {
-  "compilerOptions": {
-    "target": "es6"
-  },
-  "include": [
-    "*.js",
-    "**/*.js",
-    "c:\\Users\\123\\.vscode\\extensions\\samplavigne.p5-vscode-1.2.16\\p5types\\global.d.ts"
-  ]
+	"compilerOptions": {
+		"target": "ESNext"
+	},
+	"include": ["*.js", "**/*.js", "node_modules/q5/q5.d.ts", "node_modules/p5play/p5play.d.ts"]
 }
